WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95064
MediaStream API: Fix review comments from patch #93119
https://bugs.webkit.org/show_bug.cgi?id=95064
Summary
MediaStream API: Fix review comments from patch #93119
Tommy Widenflycht
Reported
2012-08-27 02:30:29 PDT
Also enhance the mediastream layout tests a bit.
Attachments
Patch
(12.98 KB, patch)
2012-08-27 02:36 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-08-27 02:36:56 PDT
Created
attachment 160681
[details]
Patch
Adam Barth
Comment 2
2012-08-27 11:38:53 PDT
Thanks!
WebKit Review Bot
Comment 3
2012-08-27 11:53:54 PDT
Comment on
attachment 160681
[details]
Patch Clearing flags on attachment: 160681 Committed
r126779
: <
http://trac.webkit.org/changeset/126779
>
WebKit Review Bot
Comment 4
2012-08-27 11:53:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug