MediaStream API: Fix review comments from patch #93119 https://bugs.webkit.org/show_bug.cgi?id=95064

Reviewed by Adam Barth.

Source/WebCore:

Adding const to accessors.

Change covered by exisiting tests..

* Modules/mediastream/RTCIceCandidate.cpp:
(WebCore::RTCIceCandidate::candidate):
(WebCore::RTCIceCandidate::sdpMid):
(WebCore::RTCIceCandidate::sdpMLineIndex):
* Modules/mediastream/RTCIceCandidate.h:
(RTCIceCandidate):
* Modules/mediastream/RTCSessionDescription.cpp:
(WebCore::RTCSessionDescription::create):
(WebCore::RTCSessionDescription::type):
(WebCore::RTCSessionDescription::sdp):
* Modules/mediastream/RTCSessionDescription.h:
(RTCSessionDescription):

LayoutTests:

* fast/mediastream/RTCIceCandidate-expected.txt:
* fast/mediastream/RTCIceCandidate.html:
* fast/mediastream/RTCSessionDescription-expected.txt:
* fast/mediastream/RTCSessionDescription.html:
* fast/mediastream/constructors-expected.txt:
* fast/mediastream/constructors.html:


Canonical link: https://commits.webkit.org/112959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126779 268f45cc-cd09-0410-ab3c-d52691b4dbfc